// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoidDisclaimer renders empty if not void 1`] = `<React.Fragment />`;

exports[`VoidDisclaimer renders void info for collection LOC 1`] = `
<React.Fragment>
  <DangerFrame
    className="VoidDisclaimer loc-is-void"
    title={
      <span>
        <Icon
          icon={
            Object {
              "id": "void",
            }
          }
          width="45px"
        />
         This Collection LOC with all its related Collection Items are VOID
      </span>
    }
  >
    <p>
      <strong>
        You have voided this Collection LOC with all its related Collection Items at the following date:
      </strong>
       
      <InlineDateTime
        dateTime="2022-09-28T17:25:00.000+02:00"
      />
    </p>
    <p>
      <strong>
        Reason:
      </strong>
       
      Because
    </p>
    <p>
      Please note that related public certificates show a "VOID" mention to warn people that the content of the Collection LOC as well as its related Collection Items are not valid anymore.
    </p>
  </DangerFrame>
</React.Fragment>
`;

exports[`VoidDisclaimer renders void info with replacer for identity LOC 1`] = `
<React.Fragment>
  <DangerFrame
    className="VoidDisclaimer loc-is-void"
    title={
      <span>
        <Icon
          icon={
            Object {
              "id": "void",
            }
          }
          width="45px"
        />
         This LOC is VOID
      </span>
    }
  >
    <p>
      <strong>
        You have voided this LOC at the following date:
      </strong>
       
      <InlineDateTime
        dateTime="2022-09-28T17:25:00.000+02:00"
      />
    </p>
    <p>
      <strong>
        Reason:
      </strong>
       
      Because
    </p>
    <p>
      <strong>
        This VOID LOC has been replaced by the following LOC: 
      </strong>
      <NewTabLink
        href=""
        iconId="loc-link"
        inline={true}
      >
        12855903410953768523560335487932345607
      </NewTabLink>
    </p>
    <p>
      Please note that its public certificate shows a "VOID" mention to warn people that the content of the LOC is not valid anymore. People will be automatically redirected to the replacing LOC when accessing to the void LOC URL and a mention of the fact that the replacing LOC supersedes the void LOC will be visible on both certificates.
    </p>
  </DangerFrame>
</React.Fragment>
`;

exports[`VoidDisclaimer renders void info with replacer for transaction LOC 1`] = `
<React.Fragment>
  <DangerFrame
    className="VoidDisclaimer loc-is-void"
    title={
      <span>
        <Icon
          icon={
            Object {
              "id": "void",
            }
          }
          width="45px"
        />
         This LOC is VOID
      </span>
    }
  >
    <p>
      <strong>
        You have voided this LOC at the following date:
      </strong>
       
      <InlineDateTime
        dateTime="2022-09-28T17:25:00.000+02:00"
      />
    </p>
    <p>
      <strong>
        Reason:
      </strong>
       
      Because
    </p>
    <p>
      <strong>
        This VOID LOC has been replaced by the following LOC: 
      </strong>
      <NewTabLink
        href=""
        iconId="loc-link"
        inline={true}
      >
        12855903410953768523560335487932345607
      </NewTabLink>
    </p>
    <p>
      Please note that its public certificate shows a "VOID" mention to warn people that the content of the LOC is not valid anymore. People will be automatically redirected to the replacing LOC when accessing to the void LOC URL and a mention of the fact that the replacing LOC supersedes the void LOC will be visible on both certificates.
    </p>
  </DangerFrame>
</React.Fragment>
`;

exports[`VoidDisclaimer renders void info without replacer for identity LOC 1`] = `
<React.Fragment>
  <DangerFrame
    className="VoidDisclaimer loc-is-void"
    title={
      <span>
        <Icon
          icon={
            Object {
              "id": "void",
            }
          }
          width="45px"
        />
         This LOC is VOID
      </span>
    }
  >
    <p>
      <strong>
        You have voided this LOC at the following date:
      </strong>
       
      <InlineDateTime
        dateTime="2022-09-28T17:25:00.000+02:00"
      />
    </p>
    <p>
      <strong>
        Reason:
      </strong>
       
      Because
    </p>
    <p>
      Please note that its public certificate shows a "VOID" mention to warn people that the content of the LOC is not valid anymore.
    </p>
  </DangerFrame>
</React.Fragment>
`;

exports[`VoidDisclaimer renders void info without replacer for transaction LOC 1`] = `
<React.Fragment>
  <DangerFrame
    className="VoidDisclaimer loc-is-void"
    title={
      <span>
        <Icon
          icon={
            Object {
              "id": "void",
            }
          }
          width="45px"
        />
         This LOC is VOID
      </span>
    }
  >
    <p>
      <strong>
        You have voided this LOC at the following date:
      </strong>
       
      <InlineDateTime
        dateTime="2022-09-28T17:25:00.000+02:00"
      />
    </p>
    <p>
      <strong>
        Reason:
      </strong>
       
      Because
    </p>
    <p>
      Please note that its public certificate shows a "VOID" mention to warn people that the content of the LOC is not valid anymore.
    </p>
  </DangerFrame>
</React.Fragment>
`;
